; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_msm8916-wcd-digital.c_wcd_iir_filter_info.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_msm8916-wcd-digital.c_wcd_iir_filter_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_kcontrol = type { i64 }
%struct.snd_ctl_elem_info = type { i32, i32 }
%struct.wcd_iir_filter_ctl = type { %struct.soc_bytes_ext }
%struct.soc_bytes_ext = type { i32 }

@SNDRV_CTL_ELEM_TYPE_BYTES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_kcontrol*, %struct.snd_ctl_elem_info*)* @wcd_iir_filter_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wcd_iir_filter_info(%struct.snd_kcontrol* %0, %struct.snd_ctl_elem_info* %1) #0 {
  %3 = alloca %struct.snd_kcontrol*, align 8
  %4 = alloca %struct.snd_ctl_elem_info*, align 8
  %5 = alloca %struct.wcd_iir_filter_ctl*, align 8
  %6 = alloca %struct.soc_bytes_ext*, align 8
  store %struct.snd_kcontrol* %0, %struct.snd_kcontrol** %3, align 8
  store %struct.snd_ctl_elem_info* %1, %struct.snd_ctl_elem_info** %4, align 8
  %7 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %3, align 8
  %8 = getelementptr inbounds %struct.snd_kcontrol, %struct.snd_kcontrol* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.wcd_iir_filter_ctl*
  store %struct.wcd_iir_filter_ctl* %10, %struct.wcd_iir_filter_ctl** %5, align 8
  %11 = load %struct.wcd_iir_filter_ctl*, %struct.wcd_iir_filter_ctl** %5, align 8
  %12 = getelementptr inbounds %struct.wcd_iir_filter_ctl, %struct.wcd_iir_filter_ctl* %11, i32 0, i32 0
  store %struct.soc_bytes_ext* %12, %struct.soc_bytes_ext** %6, align 8
  %13 = load i32, i32* @SNDRV_CTL_ELEM_TYPE_BYTES, align 4
  %14 = load %struct.snd_ctl_elem_info*, %struct.snd_ctl_elem_info** %4, align 8
  %15 = getelementptr inbounds %struct.snd_ctl_elem_info, %struct.snd_ctl_elem_info* %14, i32 0, i32 1
  store i32 %13, i32* %15, align 4
  %16 = load %struct.soc_bytes_ext*, %struct.soc_bytes_ext** %6, align 8
  %17 = getelementptr inbounds %struct.soc_bytes_ext, %struct.soc_bytes_ext* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.snd_ctl_elem_info*, %struct.snd_ctl_elem_info** %4, align 8
  %20 = getelementptr inbounds %struct.snd_ctl_elem_info, %struct.snd_ctl_elem_info* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
